--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "author": "sounisi5011",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "make-dir dist && del ./dist/*",
+    "build": "node ./build.js"
   },
   "dependencies": {
     "del-cli": "^2.0.0",
