--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "del-cli": "^2.0.0",
     "flat-cache": "^2.0.1",
     "make-dir-cli": "^2.0.0"
+  },
+  "devDependencies": {
+    "husky": "^3.0.0",
+    "lint-staged": "^9.2.0",
+    "prettier-package-json": "^2.1.0",
+    "sort-package-json": "^1.22.1"
   }
 }
