--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "del-cli": "^2.0.0",
     "flat-cache": "^2.0.1",
+    "hosted-git-info": "^3.0.5",
     "make-dir-cli": "^2.0.0"
   },
   "devDependencies": {
